--- a/css/scss/components/_contact-us.scss
+++ b/css/scss/components/_contact-us.scss
@@ -61,6 +61,26 @@ Contact Us Page CSS Start
     box-shadow: 0px 20px 20px 0px rgba(164, 164, 164, 0.25);
   }
 }
+
+.success {
+  padding: 10px 15px;
+  border: 1px solid #32a852;
+  font-size: 14px;
+  color: #32a852;
+  background-color: #fff;
+  display: none;
+  margin-bottom: 20px;
+}
+
+.error {
+  padding: 10px 15px;
+  border: 1px solid #fa0f0f;
+  font-size: 14px;
+  color: #fa0f0f;
+  background-color: #fff;
+  display: none;
+  margin-bottom: 20px;
+}
 /** == Form Section CSS End == **/
 
 /** ========================= 
