--- a/css/style.css
+++ b/css/style.css
@@ -1847,6 +1847,24 @@ Contact Us Page CSS Start
   border-radius: 12px;
   box-shadow: 0px 20px 20px 0px rgba(164, 164, 164, 0.25); }
 
+.success {
+  padding: 10px 15px;
+  border: 1px solid #32a852;
+  font-size: 14px;
+  color: #32a852;
+  background-color: #fff;
+  display: none;
+  margin-bottom: 20px; }
+
+.error {
+  padding: 10px 15px;
+  border: 1px solid #fa0f0f;
+  font-size: 14px;
+  color: #fa0f0f;
+  background-color: #fff;
+  display: none;
+  margin-bottom: 20px; }
+
 /** == Form Section CSS End == **/
 /** ========================= 
 Contact Us Page CSS End 
