--- a/css/scss/components/_contact-us.scss
+++ b/css/scss/components/_contact-us.scss
@@ -50,6 +50,72 @@ Contact Us Page CSS Start
         margin-top: 20px;
       }
     }
+
+    .facility-option {
+      position: relative;
+      width: 100%;
+      margin: 0px auto;
+      .arrow {
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        border-right: 2px solid #d9d9d9;
+        border-top: 2px solid #d9d9d9;
+        transform: rotate(135deg);
+        position: absolute;
+        top: 12px;
+        z-index: 0;
+        right: 105px;
+        transition: all 0.5s ease;
+
+        &.rotate {
+          position: absolute;
+          top: 20px;
+          transform: rotate(-45deg);
+        }
+      }
+      .custom-dropdown-value {
+        width: 100%;
+        padding: 10px 35px 10px 10px;
+        border: 1px solid #d9d9d9;
+        border-radius: 5px;
+        box-sizing: border-box;
+        cursor: pointer;
+        position: relative;
+        z-index: 1;
+      }
+      .custom-dropdown {
+        position: absolute;
+        width: 100%;
+        background-color: white;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        border: 1px solid #d9d9d9;
+        border-radius: 5px;
+        opacity: 0;
+        visibility: hidden;
+        li {
+          a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            font-size: 14px;
+            color: #444;
+            transition: all 0.5s ease;
+            &:hover {
+              background-color: $blue;
+              color: white;
+            }
+          }
+        }
+
+        &.open {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
   }
   // Form Part end
 
