--- a/css/style.css
+++ b/css/style.css
@@ -1840,6 +1840,59 @@ Contact Us Page CSS Start
       padding: 5px 10px; }
     .contact-form-section .contact-form .form-section .submit-btn {
       margin-top: 20px; }
+  .contact-form-section .contact-form .facility-option {
+    position: relative;
+    width: 100%;
+    margin: 0px auto; }
+    .contact-form-section .contact-form .facility-option .arrow {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border-right: 2px solid #d9d9d9;
+      border-top: 2px solid #d9d9d9;
+      transform: rotate(135deg);
+      position: absolute;
+      top: 12px;
+      z-index: 0;
+      right: 105px;
+      transition: all 0.5s ease; }
+      .contact-form-section .contact-form .facility-option .arrow.rotate {
+        position: absolute;
+        top: 20px;
+        transform: rotate(-45deg); }
+    .contact-form-section .contact-form .facility-option .custom-dropdown-value {
+      width: 100%;
+      padding: 10px 35px 10px 10px;
+      border: 1px solid #d9d9d9;
+      border-radius: 5px;
+      box-sizing: border-box;
+      cursor: pointer;
+      position: relative;
+      z-index: 1; }
+    .contact-form-section .contact-form .facility-option .custom-dropdown {
+      position: absolute;
+      width: 100%;
+      background-color: white;
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      border: 1px solid #d9d9d9;
+      border-radius: 5px;
+      opacity: 0;
+      visibility: hidden; }
+      .contact-form-section .contact-form .facility-option .custom-dropdown li a {
+        display: block;
+        padding: 10px;
+        text-decoration: none;
+        font-size: 14px;
+        color: #444;
+        transition: all 0.5s ease; }
+        .contact-form-section .contact-form .facility-option .custom-dropdown li a:hover {
+          background-color: #0601ff;
+          color: white; }
+      .contact-form-section .contact-form .facility-option .custom-dropdown.open {
+        opacity: 1;
+        visibility: visible; }
 .contact-form-section .contact-info {
   width: 100%;
   padding: 80px 40px;
