--- a/css/scss/components/_contact-us.scss
+++ b/css/scss/components/_contact-us.scss
@@ -159,6 +159,10 @@ Contact Us Page CSS Start
   display: none;
   margin-bottom: 20px;
 }
+
+.realSubmit{
+  display: none;
+}
 /** == Form Section CSS End == **/
 
 /** ========================= 
