--- a/css/style.css
+++ b/css/style.css
@@ -1928,6 +1928,9 @@ Contact Us Page CSS Start
   display: none;
   margin-bottom: 20px; }
 
+.realSubmit {
+  display: none; }
+
 /** == Form Section CSS End == **/
 /** ========================= 
 Contact Us Page CSS End 
