--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -15,6 +15,9 @@ Unit Prices Page CSS Start
     .container {
       p {
         font-size: 20px;
+        a {
+          color: #ffffff;
+        }
       }
     }
   }
@@ -135,6 +138,9 @@ Unit Prices Page CSS Start
         &.unit-details {
           font-size: 12px;
           font-weight: 400;
+        }
+        a {
+          color: #828282;
         }
       }
 
